--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="side-bar">
           <div class="side-bar-content">
             <div class="spotify-logo">
-              <a href="https://open.spotify.com/">
+              <!-- <a href="https://open.spotify.com/"> -->
                 <img src="img/Spotify logo.svg" alt="Spotify logo">
               </a>
             </div>
@@ -19,7 +19,7 @@
             <div class="nav-item nav-line-seperation">
               <div class="logo-flex">
                 <img src="img/fi-ss-home (1).svg" alt="">
-                <p>Home</p>
+                <p>Home <a href="playlist.html"></a></p>
               </div>
     
               <div class="logo-flex">
@@ -188,12 +188,11 @@
           </div>
         </div>
       </div>
-      <div class="play-music-area">
-        <div class="song-playing">
+        <!-- <div class="song-playing">
           <img src="img/f1.jpg" alt="song-playing" class="music-art">
           <div class="song-playing-name">
             <h4>Dreaming on</h4>
-            <p>NEFFIX</p>
+            <p>NETFLIX</p>
           </div>
           <img src="img/f2.svg" alt="like song" class="like-a-song" bgm="red">
         </div>
@@ -218,12 +217,48 @@
           <img src="img/f12.svg" alt="mute">
           <img src="img/f13.svg" alt="volume" id="volume">
           <img src="img/f14.svg" alt="streath scrren">
+        </div> -->
+        <div class="play-music-area">
+        <div class="song-playing">"
+          <div class="music-art">
+            <img src="img/f1.jpg" alt="song-playing">
+          </div>
+          <div class="song-playing-name">
+            <h4>Dreaming on</h4>
+            <p>NETFLIX</p>
+          </div>
+          <div class="like-a-song" >
+            <img src="img/f2.svg" alt="like song" bgm="red">
+          </div>
         </div>
+        <div class="song-control">
+          <div  class="song-control-upper">
+            <img src="img/f3.svg" alt="loop">
+            <img src="img/f4.svg" alt="previous">
+            <img src="img/f5.svg" alt="play" id="play-button">
+            <img src="img/f6.svg" alt="next">
+            <img src="img/f7.svg" alt="loop" >
+         </div>
+          <div class="song-control-lower">
+            <p>1:11</p>
+            <img src="img/f8.svg" alt="song-scroll" id="loop">
+            <p>3.45</p>
+           </div>
+        </div>
+  
+              
+        <div class="song-extra-control">
+        <img src="img/f9.svg" alt="loop" id="lyrics">
+        <img src="img/f10.svg" alt="query">
+        <img src="img/f11.svg" alt="link-debice">
+        <img src="img/f12.svg" alt="mute">
+        <img src="img/f13.svg" alt="volume" id="volume">
+        <img src="img/f14.svg" alt="scrren">
       </div>
 
       <div class="green-notice">
         <img src="media/fluent_speaker-2-24-regular.svg" alt="">
-        <h3>Listening on Lenovo Ideapad Slim 3</h3>
+        <h3>Listening on Lenovo Idea pad Slim 3</h3>
       </div>
 </body>
 </html>
